--- a/style.css
+++ b/style.css
@@ -285,3 +285,36 @@ button:hover span{
     color: white;
     margin-bottom: 0px;
 }
+
+
+
+.numbers-image-5{
+    background-image: url(./images/facebook-icon.png);
+    background-position: center;
+    background-size: cover;
+    width: 46px;
+    height: 46px;
+    margin-right: 20px;
+    margin-top: 10px;
+}
+.numbers-image-6{
+    background-image: url(./images/telegram-icon.png);
+    background-position: center;
+    background-size: cover;
+    width: 46px;
+    height: 46px;
+    margin-right: 20px;
+    margin-top: 10px;
+}
+.p-bold{
+    font-weight: bold;
+    color: white;
+    font-size: 16px;
+    margin-bottom: 15px;
+}
+.heading{
+    font-size: 26px;
+    color: white;
+    margin-bottom: 0px;
+}
+
